--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ python-dotenv>=0.20.0
 slack_sdk>=3.21.0
 streamlit>=1.28.0
 pandas>=1.5.0
-resend>=0.6.0 
+resend>=0.6.0
+supabase>=2.0.0
+beautifulsoup4>=4.12.0 
