--- a/requirements_streamlit.txt
+++ b/requirements_streamlit.txt
@@ -3,6 +3,7 @@ streamlit>=1.30.0
 pandas>=2.0.0
 supabase>=2.0.0
 python-dotenv>=1.0.0
+toml>=0.10.0
 
 # Backend dependencies (from original requirements.txt)
 requests>=2.31.0
